[gd_scene load_steps=3 format=3 uid="uid://bm31gemem22uc"]

[ext_resource type="Script" uid="uid://bv0hffvudv51d" path="res://addons/curved_lines_2d/assign_stroke_inspector_form.gd" id="1_j8wjx"]
[ext_resource type="Texture2D" uid="uid://31qakec1dm6y" path="res://addons/curved_lines_2d/Key.svg" id="3_2fv2a"]

[node name="AssignStrokeInspectorForm" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_j8wjx")

[node name="StrokeColorFieldContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="StrokeColorFieldContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the default_color of the assigned Line2D."
mouse_filter = 0
text = "Stroke Color"

[node name="HBoxContainer" type="HBoxContainer" parent="StrokeColorFieldContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorPickerButton" type="ColorPickerButton" parent="StrokeColorFieldContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the default_color of the assigned Line2D."
text = "Stroke"
color = Color(1, 1, 1, 1)

[node name="AddStrokeColorKeyFrameButton" type="Button" parent="StrokeColorFieldContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Click to add a key frame to the current animation for the Line2D's default_color property"
icon = ExtResource("3_2fv2a")

[node name="StrokeWidthFieldContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="StrokeWidthFieldContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the width of the assign Line2D node"
mouse_filter = 0
text = "Stroke Width"

[node name="HBoxContainer" type="HBoxContainer" parent="StrokeWidthFieldContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StrokeWidthFloatFieldContainer" type="PanelContainer" parent="StrokeWidthFieldContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will set the width of the assign Line2D node"

[node name="AddStrokeWidthKeyFrameButton" type="Button" parent="StrokeWidthFieldContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Click to add a key frame to the current animation for the Line2D's width property"
icon = ExtResource("3_2fv2a")

[node name="ButtonContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer"]
clip_contents = true
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "This will create a new Line2D node and assign it to the line property of this ScalableVectorScape2D."
mouse_filter = 0
text = "Add Stroke"

[node name="CreateStrokeButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "This will create a new Line2D node and assign it to the line property of this ScalableVectorScape2D."
text = "Add Stroke"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="ButtonContainer2" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label2" type="Label" parent="ButtonContainer2"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Click on this button to select the Line2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot, like gradients, width curvature, and repeating textures."
mouse_filter = 0
text = "Edit Line2D *"

[node name="GotoLine2DButton" type="Button" parent="ButtonContainer2"]
layout_mode = 2
size_flags_horizontal = 2
tooltip_text = "Click on this button to select the Line2D node that is assigned to this shape  in the Scene Tree.

Use this for advanced features which are already built-in into godot, like gradients, width curvature, and repeating textures."
text = "Edit Line2D"

[connection signal="color_changed" from="StrokeColorFieldContainer/HBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="toggled" from="StrokeColorFieldContainer/HBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_toggled"]
[connection signal="pressed" from="StrokeColorFieldContainer/HBoxContainer/AddStrokeColorKeyFrameButton" to="." method="_on_add_stroke_color_key_frame_button_pressed"]
[connection signal="pressed" from="StrokeWidthFieldContainer/HBoxContainer/AddStrokeWidthKeyFrameButton" to="." method="_on_add_stroke_width_key_frame_button_pressed"]
[connection signal="pressed" from="ButtonContainer/CreateStrokeButton" to="." method="_on_create_stroke_button_pressed"]
[connection signal="pressed" from="ButtonContainer2/GotoLine2DButton" to="." method="_on_goto_line_2d_button_pressed"]
